Large update:  - Update Cilium to 1.10.5  - Update Centos to 8.4  - Update Helm to 3.5.4  - Adopted to new naming of the ansible-kubernetes collection  - Preparing to add BGP support for Cilium. Added the options, but those do not work yet  - Added the option to use lan interfaces on an Openvswitch

--- a/roles/infrastructure/terraform/templates/main.tf.j2
+++ b/roles/infrastructure/terraform/templates/main.tf.j2
@@ -60,9 +60,20 @@ resource "libvirt_domain" "k8s_control" {
   }
 
   network_interface {
+{% if network_interface_type == 'bridge' %}
+    bridge = "switch0"
+{% else %}
     network_name = "default"
+{% endif %}
     wait_for_lease = true
   }
+
+{% if openvswitch_bridge == 'openvswitch' %}
+  xml {
+    xslt = file("ovs-port.xsl")
+  }
+{% endif %}
+
 }
 
 ###
@@ -117,9 +128,19 @@ resource "libvirt_domain" "k8s_master" {
   }
 
   network_interface {
+{% if network_interface_type == 'bridge' %}
+    bridge = "switch0"
+{% else %}
     network_name = "default"
+{% endif %}
     wait_for_lease = true
   }
+
+{% if openvswitch_bridge == 'openvswitch' %}
+  xml {
+    xslt = file("ovs-port.xsl")
+  }
+{% endif %}
 }
 
 ###
@@ -174,7 +195,17 @@ resource "libvirt_domain" "k8s_worker" {
   }
 
   network_interface {
+{% if network_interface_type == 'bridge' %}
+    bridge = "switch0"
+{% else %}
     network_name = "default"
+{% endif %}
     wait_for_lease = true
   }
+
+{% if openvswitch_bridge == 'openvswitch' %}
+  xml {
+    xslt = file("ovs-port.xsl")
+  }
+{% endif %}
 }
